--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
+                    <div class="picture d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></div>
                     <h1 class="mb-0">
                         Dima
                         <span class="text-primary">Udovenko</span>
