--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                         <span class="text-primary">Udovenko</span>
                     </h1>
                     <div class="subheading mb-5">
-                        .net back end · Student of NURE · +38(063) 067-5355 ·
+                        .net dev · Student of NURE · +38(063) 067-5355 ·
                         <a href="mailto:name@email.com">udovenkodima7@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">ASP .NET CORE DEV. C#, ASP NET CORE, EF CORE, SQL, MS SQL, ORACLE, HTML, CSS, ENG</p>
+                    <p class="lead mb-5">Status: .net dev in startup for 3 month, NFT Hockey manager</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/dima-source"><i class="fab fa-github"></i></a>
